--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.arimorty:floatingsearchview:2.0.3'
 }
